[project]
name = "muse-ltx-timeline"
description = "Standalone LTX 2.3 AV director with infinite chunking, visual timeline editor, lipsync, layered audio, and per-segment prompts. No external dependencies."
version = "1.0.0"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/muse-collective-26/muse-ltx-timeline"

[tool.comfy]
PublisherId = "muse-collective"
DisplayName = "Muse Collective LTX Timeline"
Icon = ""
