[project]
name = "muse-ltx-timeline-v2"
description = "Fork of muse-ltx-timeline (V1) adding Seed Hunt: a cheap 4-seed low-res scouting pass reusing the real timeline's guide/audio data, so you can pick a seed before committing to the full Stage 1 + Stage 2 pipeline. V1 is included untouched alongside it."
version = "1.0.3"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/muse-collective-26/muse-ltx-timeline-v2"

[tool.comfy]
PublisherId = "muse-collective"
DisplayName = "Muse Director V2 - Seed Scout"
Icon = ""
