[project]
name = "muse-ltx-timeline-v2"
description = "Fork of muse-ltx-timeline (V1) adding Seed Hunt: a 4-seed Stage-1-resolution scouting pass reusing the real timeline's guide/audio data — pick a candidate visually and its actual latent carries forward into Stage 2 (upscale + refine), instead of regenerating from scratch. V1 is included untouched alongside it."
version = "1.0.7"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/muse-collective-26/muse-ltx-timeline-v2"

[tool.comfy]
PublisherId = "muse-collective"
DisplayName = "Muse Director V2 - Seed Scout"
Icon = ""
